feat: update benchmark configuration defaults and add cloud-related settings; enhance documentation and tests